[Win] Custom scale factor is not applied in all cases. https://bugs.webkit.org/show_bug.cgi?id=168117

Reviewed by Brent Fulgham.

We should not call the function deviceScaleFactorForWindow directly, since this
will return the system scale factor, and ignore the custom scale factor.

Source/WebCore:

* platform/graphics/ca/win/CACFLayerTreeHost.h:
* platform/graphics/ca/win/WKCACFViewLayerTreeHost.cpp:
(WebCore::WKCACFViewLayerTreeHost::initializeContext):
(WebCore::WKCACFViewLayerTreeHost::resize):
(WebCore::WKCACFViewLayerTreeHost::setScaleFactor):
* platform/graphics/ca/win/WKCACFViewLayerTreeHost.h:
* platform/win/GDIUtilities.h:
(WebCore::makeScaledPoint):
* platform/win/PlatformMouseEventWin.cpp:
(WebCore::positionForEvent):
* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::show):
(WebCore::PopupMenuWin::wndProc):
* platform/win/PopupMenuWin.h:

Source/WebKit/win:

* WebView.cpp:
(WebView::handleContextMenuEvent):
(WebView::handleMouseEvent):
(WebView::setAcceleratedCompositing):


Canonical link: https://commits.webkit.org/185607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212652 268f45cc-cd09-0410-ab3c-d52691b4dbfc