Source/WebCore/platform/win/PopupMenuWin.h
@@ -134,6 +134,7 @@ private:
     bool m_wasClicked { false };
     bool m_scrollbarCapturingMouse { false };
     bool m_showPopup { false };
+    float m_scaleFactor { 1 };
 
     friend class AccessiblePopupMenu;
 };
